--- a/Catarator/Scene/TabBar/TabBar.storyboard
+++ b/Catarator/Scene/TabBar/TabBar.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ez7-2o-xYY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ez7-2o-xYY">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,7 +34,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P04-Z9-RTd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-825" y="-592"/>
+            <point key="canvasLocation" x="-876" y="-592"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="NoG-Eo-lQR">
@@ -47,15 +47,47 @@
                     </tabBar>
                     <connections>
                         <segue destination="bUH-lw-GBU" kind="relationship" relationship="viewControllers" id="Shn-3v-jSm"/>
+                        <segue destination="0T8-Jy-BMf" kind="relationship" relationship="viewControllers" id="9xn-2e-qvu"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iz1-gJ-dYz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2024" y="-239"/>
         </scene>
+        <!--Texted-->
+        <scene sceneID="45k-z5-82R">
+            <objects>
+                <navigationController id="0T8-Jy-BMf" userLabel="Texted" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Text" image="text.bubble" catalog="system" id="CBX-x6-a74">
+                        <imageReference key="selectedImage" image="text.bubble.fill" catalog="system" renderingMode="template"/>
+                    </tabBarItem>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="TZq-cX-Uft">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="kq3-1a-qCC" kind="relationship" relationship="rootViewController" id="ANA-Xr-sR3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SVI-is-0SG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-877" y="176"/>
+        </scene>
+        <!--TextedCat-->
+        <scene sceneID="PXX-r4-eVc">
+            <objects>
+                <viewControllerPlaceholder storyboardName="TextedCat" id="kq3-1a-qCC" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="sro-tx-L9S"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="16j-fx-JN8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-121" y="175"/>
+        </scene>
     </scenes>
     <resources>
         <image name="cat.circle" catalog="system" width="128" height="123"/>
         <image name="cat.circle.fill" catalog="system" width="128" height="123"/>
+        <image name="text.bubble" catalog="system" width="128" height="110"/>
+        <image name="text.bubble.fill" catalog="system" width="128" height="110"/>
     </resources>
 </document>
