--- a/Catarator/Scene/TextedCat/Base.lproj/TextedCat.storyboard
+++ b/Catarator/Scene/TextedCat/Base.lproj/TextedCat.storyboard
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Welcome View Controller-->
+        <!--Texted Cat Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="WelcomeViewController" customModule="ConcerteApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="Texted Cat Controller" customClass="TextedCatController" customModule="Catarator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cat" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="fzZ-77-Nel">
-                                <rect key="frame" x="24" y="82.666666666666657" width="345" height="346.33333333333337"/>
+                                <rect key="frame" x="24" y="82.333333333333343" width="345" height="346.33333333333326"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="fzZ-77-Nel" secondAttribute="height" multiplier="1:1" id="VW9-fp-1Mg"/>
                                 </constraints>
@@ -39,16 +39,28 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="wpU-IX-RYf">
                                 <rect key="frame" x="178" y="420" width="37" height="37"/>
                             </activityIndicatorView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите текст" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n73-Id-WbG" userLabel="Input">
+                                <rect key="frame" x="41" y="537" width="328" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="input:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="2Pn-fz-fze"/>
+                                    <action selector="textField:" destination="EVh-vP-zZM" eventType="editingDidEnd" id="GAN-5r-YUU"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="n73-Id-WbG" firstAttribute="trailing" secondItem="fzZ-77-Nel" secondAttribute="trailing" id="6DI-JE-oGS"/>
+                            <constraint firstItem="n73-Id-WbG" firstAttribute="top" secondItem="o2x-8W-rhk" secondAttribute="bottom" constant="8" id="BmX-YL-Rc4"/>
                             <constraint firstItem="o2x-8W-rhk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="12" id="EbL-nX-LtS"/>
                             <constraint firstItem="fzZ-77-Nel" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="F7K-GM-QgP"/>
                             <constraint firstItem="wpU-IX-RYf" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Fyp-vJ-OaS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="o2x-8W-rhk" secondAttribute="trailing" constant="12" id="MrC-cs-XEC"/>
                             <constraint firstItem="fzZ-77-Nel" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="QyK-BH-2Zs"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fzZ-77-Nel" secondAttribute="trailing" constant="24" id="TEr-qq-V6u"/>
+                            <constraint firstItem="n73-Id-WbG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="41" id="Zgx-NF-ULM"/>
                             <constraint firstItem="wpU-IX-RYf" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="eRH-I1-TOE"/>
                             <constraint firstItem="3zf-ne-uEe" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="evl-jm-WJz"/>
                             <constraint firstItem="o2x-8W-rhk" firstAttribute="top" secondItem="3zf-ne-uEe" secondAttribute="bottom" constant="21" id="jSg-aO-iMA"/>
@@ -59,12 +71,15 @@
                     <connections>
                         <outlet property="activityIndicator" destination="wpU-IX-RYf" id="Su9-Fn-WsR"/>
                         <outlet property="catImageView" destination="fzZ-77-Nel" id="LtH-wx-aXt"/>
+                        <outlet property="generationButton" destination="3zf-ne-uEe" id="yvX-f6-cy6"/>
                         <outlet property="statusLabel" destination="o2x-8W-rhk" id="2Bh-hC-O55"/>
+                        <outlet property="textInput" destination="n73-Id-WbG" id="8oP-41-Phb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="EVh-vP-zZM" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="140" y="4"/>
+            <point key="canvasLocation" x="139.69465648854961" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
